use client-side processing for track stream control
